gccida/c0/print_reg
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_reg/src/i386.c:6149:16: error: use of undeclared identifier 'off_8068CF'
fprintf( file, off_8068CF, ( unsigned int)( x->fld[0].rtint - 37 + 8)); 
               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_reg/src/obj/i386.o] Error 1
